// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files 1`] = `
[
  "api-response.form-group-fac.ts",
  "api-response.form.ts",
  "api-response.model.ts",
  "api-response.properties.ts",
  "api-response.test-obj-fac.ts",
  "category.form-group-fac.ts",
  "category.form.ts",
  "category.model.ts",
  "category.properties.ts",
  "category.test-obj-fac.ts",
  "endpoints.ts",
  "index.ts",
  "order.form-group-fac.ts",
  "order.form.ts",
  "order.model.ts",
  "order.properties.ts",
  "order.test-obj-fac.ts",
  "pet.form-group-fac.ts",
  "pet.form.ts",
  "pet.model.ts",
  "pet.properties.ts",
  "pet.test-obj-fac.ts",
  "tag.form-group-fac.ts",
  "tag.form.ts",
  "tag.model.ts",
  "tag.properties.ts",
  "tag.test-obj-fac.ts",
  "user.form-group-fac.ts",
  "user.form.ts",
  "user.model.ts",
  "user.properties.ts",
  "user.test-obj-fac.ts",
]
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: api-response.form.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup } from '@angular/forms'; //NOSONAR

export interface IApiResponseForm {
    code: FormControl<number | null | undefined>;
    type: FormControl<string | null | undefined>;
    message: FormControl<string | null | undefined>;
}
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: api-response.form-group-fac.ts 1`] = `
"/* eslint-disable no-useless-escape */
/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR
import { IApiResponseForm } from './api-response.form';

export function ApiResponseFormGroupFac(): FormGroup<IApiResponseForm> {
  return new FormGroup<IApiResponseForm>({

    code: new FormControl<number | null | undefined>(undefined),

    type: new FormControl<string | null | undefined>(undefined),

    message: new FormControl<string | null | undefined>(undefined),
  });
}
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: api-response.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* eslint-disable-next-line @typescript-eslint/no-empty-interface */
export interface IApiResponse {
  code?: number | null;
  type?: string | null;
  message?: string | null;
}
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: api-response.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* eslint-disable */
export enum ApiResponseProperties {
  CODE = 'code',
  TYPE = 'type',
  MESSAGE = 'message',
}
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: api-response.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { ApiResponseProperties } from './api-response.properties';

export function createTestApiResponse() {
    return { 
      [ApiResponseProperties.CODE]: 0,
      [ApiResponseProperties.TYPE]: 'TYPE',
      [ApiResponseProperties.MESSAGE]: 'MESSAGE',
    };
}
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: category.form.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup } from '@angular/forms'; //NOSONAR

export interface ICategoryForm {
    id: FormControl<number | null | undefined>;
    name: FormControl<string | null | undefined>;
}
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: category.form-group-fac.ts 1`] = `
"/* eslint-disable no-useless-escape */
/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR
import { ICategoryForm } from './category.form';

export function CategoryFormGroupFac(): FormGroup<ICategoryForm> {
  return new FormGroup<ICategoryForm>({

    id: new FormControl<number | null | undefined>(undefined),

    name: new FormControl<string | null | undefined>(undefined),
  });
}
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: category.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* eslint-disable-next-line @typescript-eslint/no-empty-interface */
export interface ICategory {
  id?: number | null;
  name?: string | null;
}
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: category.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* eslint-disable */
export enum CategoryProperties {
  ID = 'id',
  NAME = 'name',
}
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: category.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { CategoryProperties } from './category.properties';

export function createTestCategory() {
    return { 
      [CategoryProperties.ID]: 0,
      [CategoryProperties.NAME]: 'NAME',
    };
}
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: endpoints.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #endpoints-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* eslint-disable */
export enum Endpoints {
  pet = '/pet',
  petFindByStatus = '/pet/findByStatus',
  petFindByTags = '/pet/findByTags',
  pet2 = '/pet/{petId}',
  petUploadImage = '/pet/{petId}/uploadImage',
  store = '/store/inventory',
  storeOrder = '/store/order',
  store2 = '/store/order/{orderId}',
  user = '/user',
  userCreateWithList = '/user/createWithList',
  userLogin = '/user/login',
  userLogout = '/user/logout',
  user2 = '/user/{username}',
}
export interface IEndpoints {
  readonly pet: string;
  readonly petFindByStatus: string;
  readonly petFindByTags: string;
  readonly pet2: string;
  readonly petUploadImage: string;
  readonly store: string;
  readonly storeOrder: string;
  readonly store2: string;
  readonly user: string;
  readonly userCreateWithList: string;
  readonly userLogin: string;
  readonly userLogout: string;
  readonly user2: string;
}
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: index.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #index.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* eslint-disable */
export * from './api-response.form-group-fac';
export * from './api-response.form';
export * from './api-response.model';
export * from './api-response.properties';
export * from './api-response.test-obj-fac';
export * from './category.form-group-fac';
export * from './category.form';
export * from './category.model';
export * from './category.properties';
export * from './category.test-obj-fac';
export * from './order.form-group-fac';
export * from './order.form';
export * from './order.model';
export * from './order.properties';
export * from './order.test-obj-fac';
export * from './pet.form-group-fac';
export * from './pet.form';
export * from './pet.model';
export * from './pet.properties';
export * from './pet.test-obj-fac';
export * from './tag.form-group-fac';
export * from './tag.form';
export * from './tag.model';
export * from './tag.properties';
export * from './tag.test-obj-fac';
export * from './user.form-group-fac';
export * from './user.form';
export * from './user.model';
export * from './user.properties';
export * from './user.test-obj-fac';
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: order.form.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup } from '@angular/forms'; //NOSONAR

export interface IOrderForm {
    id: FormControl<number | null | undefined>;
    petId: FormControl<number | null | undefined>;
    quantity: FormControl<number | null | undefined>;
    shipDate: FormControl<Date | null | undefined>;
    status: FormControl<string | null | undefined>;
    complete: FormControl<boolean | null | undefined>;
}
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: order.form-group-fac.ts 1`] = `
"/* eslint-disable no-useless-escape */
/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR
import { IOrderForm } from './order.form';

export function OrderFormGroupFac(): FormGroup<IOrderForm> {
  return new FormGroup<IOrderForm>({

    id: new FormControl<number | null | undefined>(undefined),

    petId: new FormControl<number | null | undefined>(undefined),

    quantity: new FormControl<number | null | undefined>(undefined),

    shipDate: new FormControl<Date | null | undefined>(undefined),

    status: new FormControl<string | null | undefined>(undefined),

    complete: new FormControl<boolean | null | undefined>(undefined),
  });
}
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: order.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* eslint-disable-next-line @typescript-eslint/no-empty-interface */
export interface IOrder {
  id?: number | null;
  petId?: number | null;
  quantity?: number | null;
  shipDate?: Date | null;
/**
 * Order Status
 */
  status?: string | null;
  complete?: boolean | null;
}
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: order.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* eslint-disable */
export enum OrderProperties {
  ID = 'id',
  PET_ID = 'petId',
  QUANTITY = 'quantity',
  SHIP_DATE = 'shipDate',
/**
 * Order Status
 */
  STATUS = 'status',
  COMPLETE = 'complete',
}
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: order.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { OrderProperties } from './order.properties';

export function createTestOrder() {
    return { 
      [OrderProperties.ID]: 0,
      [OrderProperties.PET_ID]: 0,
      [OrderProperties.QUANTITY]: 0,
      [OrderProperties.SHIP_DATE]: new Date(),
      [OrderProperties.STATUS]: 'STATUS',
      [OrderProperties.COMPLETE]: false,
    };
}
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: pet.form.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup } from '@angular/forms'; //NOSONAR
import { ICategoryForm } from './category.form';
import { ITagForm } from './tag.form';

export interface IPetForm {
    id: FormControl<number | null | undefined>;
    name: FormControl<string>;
    photoUrls: FormArray<FormControl<string>>;
    status: FormControl<string | null | undefined>;
    category: FormGroup<ICategoryForm>;
    tags: FormArray<FormGroup<ITagForm>>;
}
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: pet.form-group-fac.ts 1`] = `
"/* eslint-disable no-useless-escape */
/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR
import { IPetForm } from './pet.form';
import { ICategoryForm } from './category.form';
import { CategoryFormGroupFac } from './category.form-group-fac';
import { ITagForm } from './tag.form';

export function PetFormGroupFac(): FormGroup<IPetForm> {
  return new FormGroup<IPetForm>({

    id: new FormControl<number | null | undefined>(undefined),
    // @ts-expect-error this is intentional, we want the initial value to be undefined so that the required validator will work correctly.
    name: new FormControl<string>(undefined, { validators: Validators.required, nonNullable: true } ),
    photoUrls: new FormArray<FormControl<string>>([], { validators: Validators.required }),

    status: new FormControl<string | null | undefined>(undefined),
    category: new FormGroup<ICategoryForm>(CategoryFormGroupFac().controls),
    tags: new FormArray<FormGroup<ITagForm>>([]),
  });
}
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: pet.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { ICategory } from './category.model';
import { ITag } from './tag.model';

/* eslint-disable-next-line @typescript-eslint/no-empty-interface */
export interface IPet {
  id?: number | null;
  name?: string;
  photoUrls?: string[];
/**
 * pet status in the store
 */
  status?: string | null;
  category?: Partial<ICategory>;
  tags?: Partial<ITag[]>;
}
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: pet.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* eslint-disable */
export enum PetProperties {
  ID = 'id',
  NAME = 'name',
  PHOTO_URLS = 'photoUrls',
/**
 * pet status in the store
 */
  STATUS = 'status',
  CATEGORY = 'category',
  TAGS = 'tags',
}
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: pet.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { PetProperties } from './pet.properties';

export function createTestPet() {
    return { 
      [PetProperties.ID]: 0,
      [PetProperties.NAME]: 'NAME',
      [PetProperties.PHOTO_URLS]: [],
      [PetProperties.STATUS]: 'STATUS',
      [PetProperties.CATEGORY]: undefined,
      [PetProperties.TAGS]: [],
    };
}
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: tag.form.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup } from '@angular/forms'; //NOSONAR

export interface ITagForm {
    id: FormControl<number | null | undefined>;
    name: FormControl<string | null | undefined>;
}
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: tag.form-group-fac.ts 1`] = `
"/* eslint-disable no-useless-escape */
/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR
import { ITagForm } from './tag.form';

export function TagFormGroupFac(): FormGroup<ITagForm> {
  return new FormGroup<ITagForm>({

    id: new FormControl<number | null | undefined>(undefined),

    name: new FormControl<string | null | undefined>(undefined),
  });
}
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: tag.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* eslint-disable-next-line @typescript-eslint/no-empty-interface */
export interface ITag {
  id?: number | null;
  name?: string | null;
}
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: tag.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* eslint-disable */
export enum TagProperties {
  ID = 'id',
  NAME = 'name',
}
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: tag.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { TagProperties } from './tag.properties';

export function createTestTag() {
    return { 
      [TagProperties.ID]: 0,
      [TagProperties.NAME]: 'NAME',
    };
}
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: user.form.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup } from '@angular/forms'; //NOSONAR

export interface IUserForm {
    id: FormControl<number | null | undefined>;
    username: FormControl<string | null | undefined>;
    firstName: FormControl<string | null | undefined>;
    lastName: FormControl<string | null | undefined>;
    email: FormControl<string | null | undefined>;
    password: FormControl<string | null | undefined>;
    phone: FormControl<string | null | undefined>;
    userStatus: FormControl<number | null | undefined>;
}
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: user.form-group-fac.ts 1`] = `
"/* eslint-disable no-useless-escape */
/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR
import { IUserForm } from './user.form';

export function UserFormGroupFac(): FormGroup<IUserForm> {
  return new FormGroup<IUserForm>({

    id: new FormControl<number | null | undefined>(undefined),

    username: new FormControl<string | null | undefined>(undefined),

    firstName: new FormControl<string | null | undefined>(undefined),

    lastName: new FormControl<string | null | undefined>(undefined),

    email: new FormControl<string | null | undefined>(undefined),

    password: new FormControl<string | null | undefined>(undefined),

    phone: new FormControl<string | null | undefined>(undefined),

    userStatus: new FormControl<number | null | undefined>(undefined),
  });
}
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: user.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* eslint-disable-next-line @typescript-eslint/no-empty-interface */
export interface IUser {
  id?: number | null;
  username?: string | null;
  firstName?: string | null;
  lastName?: string | null;
  email?: string | null;
  password?: string | null;
  phone?: string | null;
/**
 * User Status
 */
  userStatus?: number | null;
}
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: user.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* eslint-disable */
export enum UserProperties {
  ID = 'id',
  USERNAME = 'username',
  FIRST_NAME = 'firstName',
  LAST_NAME = 'lastName',
  EMAIL = 'email',
  PASSWORD = 'password',
  PHONE = 'phone',
/**
 * User Status
 */
  USER_STATUS = 'userStatus',
}
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: user.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { UserProperties } from './user.properties';

export function createTestUser() {
    return { 
      [UserProperties.ID]: 0,
      [UserProperties.USERNAME]: 'USERNAME',
      [UserProperties.FIRST_NAME]: 'FIRST_NAME',
      [UserProperties.LAST_NAME]: 'LAST_NAME',
      [UserProperties.EMAIL]: 'EMAIL',
      [UserProperties.PASSWORD]: 'PASSWORD',
      [UserProperties.PHONE]: 'PHONE',
      [UserProperties.USER_STATUS]: 0,
    };
}
"
`;
